--- a/index.html
+++ b/index.html
@@ -4,8 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <table>
+        <caption>Orarend</caption> <!-- Tablazat cime/neve -->
+        <thead> <!-- Tablazat fejlec -->
+            <tr> <!-- Tablazat sora -->
+                <th> <!-- Tablazat table headings -->
+                    Oszlop1
+                </th>
+                <th> <!-- Tablazat table headings -->
+                    Oszlop2
+                </th>
+                <th> <!-- Tablazat table headings -->
+                    Oszlop3
+                </th>
+            </tr>
+        </thead>
+        <tbody> <!-- Tablazat tartalma -->
+            <tr> <!-- Tablazat sora -->
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 1
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 2
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 3
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 4
+                </td>
+            </tr>
+            <tr>
+                <td> <!-- Tablazat table data -->
+                    SOR 2 ADAT 1
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 2 ADAT 2
+                </td>
+            </tr>
+                        <tr> <!-- Tablazat sora -->
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 1
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 2
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 3
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 4
+                </td>
+            </tr>
+            <tr>
+                <td> <!-- Tablazat table data -->
+                    SOR 2 ADAT 1
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 2 ADAT 2
+                </td>
+            </tr>
+                        <tr> <!-- Tablazat sora -->
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 1
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 2
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 3
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 1 ADAT 4
+                </td>
+            </tr>
+            <tr>
+                <td> <!-- Tablazat table data -->
+                    SOR 2 ADAT 1
+                </td>
+                <td> <!-- Tablazat table data -->
+                    SOR 2 ADAT 2
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
